objects/kugo2p__AdditionalProductDetail__c.object
<CustomObject>
    <description>Kugamon - Related object to Salesforce Product that handles Kugamon Product data points. Kugamon does not add fields to Product object. Set data points such as key Service designation, Kits/Bundles, and Tax information. Only one Additional Product Info record allowed for a given Salesforce Product.</description>
    <fields>
        <fullName>Product2Id__c</fullName>
        <description>The standard Product Id this record was created from</description>
        <externalId>true</externalId>
        <inlineHelpText>The standard Product Id this record was created from</inlineHelpText>
        <label>Product2Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__AccountingGroup__c</fullName>
        <label>Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AvailabletoPromiseLeadTime__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available to Promise Lead Time (days)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigurationAction__c</fullName>
        <description>In Quote and Order Configurator page, Always presents Configuration from Add Lines and Edit Lines, Add presents Configuration via Add Lines, and Edit presents Configuration via Edit Lines. If blank, Always action is used, or None when Type is Disabled.</description>
        <inlineHelpText>In Quote and Order Configurator page, Always presents Configuration from Add Lines and Edit Lines, Add presents Configuration via Add Lines, and Edit presents Configuration via Edit Lines. If blank, Always action is used, or None when Type is Disabled</inlineHelpText>
        <label>Configuration Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>kugo2p__ConfigurationType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigurationInstructions__c</fullName>
        <description>Displays Instructions in Quote and Order Configurator page for Kit/Bundles and Configured Products.</description>
        <inlineHelpText>Displays Instructions in Quote and Order Configurator page for Kit/Bundles and Configured Products</inlineHelpText>
        <label>Configuration Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigurationMethod__c</fullName>
        <description>Set Configuration by Kit/Bundle, uses Kit/Bundle functionality, or by Configuration Options, uses Configuration Groups and Configuration Options functionality. If blank, Kit/Bundle configuration method is used.</description>
        <inlineHelpText>Set Configuration by Kit/Bundle, uses Kit/Bundle functionality, or by Configuration Options, uses Configuration Groups and Configuration Options functionality. If blank, Kit/Bundle configuration method is used</inlineHelpText>
        <label>Configuration Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kit/Bundle</fullName>
                </value>
                <value>
                    <fullName>Configure</fullName>
                    <label>Configuration Options</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigurationType__c</fullName>
        <description>In Quote and Order Configurator page, Required necessitates Configuration, Allowed is when Configuration is Available, and Disabled does not allow Configuration. If blank, Disabled configuration type is used.</description>
        <inlineHelpText>In Quote and Order Configurator page, Required necessitates Configuration, Allowed is when Configuration is Available, and Disabled does not allow Configuration. If blank, Disabled configuration type is used</inlineHelpText>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__CreateAsset__c</fullName>
        <inlineHelpText>Assets are Auto-Created for Products when an Order is Approved or Released. Assets will be Auto-Sync when an Approved Order is Updated. Not applicable for Services.</inlineHelpText>
        <label>Create Asset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Line</fullName>
                </value>
                <value>
                    <fullName>Per Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultCostMarkupPercent__c</fullName>
        <description>Used to determine the initial Cost Markup Amount on Quote and Order Lines when Pricing Method is Cost. Requires Active Product Cost record.</description>
        <inlineHelpText>Used to determine the initial Cost Markup Amount on Quote and Order Lines when Pricing Method is Cost. Requires Active Product Cost record</inlineHelpText>
        <label>Default Cost Markup Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultLineDescription__c</fullName>
        <description>Sets the initial Line Description text in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the initial Line Description text in Quote and Order configurator page</inlineHelpText>
        <label>Default Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultLineDiscount__c</fullName>
        <description>Sets the initial Line Discount value in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the initial Line Discount value in Quote and Order configurator page</inlineHelpText>
        <label>Default Line Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultQuantity__c</fullName>
        <description>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1.</description>
        <inlineHelpText>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__DefaultServiceTerm__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Sets the initial Service Term value in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the initial Service Term value in Quote and Order configurator page</inlineHelpText>
        <label>Default Service Term</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__DisableShipments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents the creation of Shipment Record. Applicable to Products (Service field is set to False).</inlineHelpText>
        <label>Disable Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__EditListPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Edits to List Price in Quote and Order Configurator.</description>
        <inlineHelpText>Allow Edits to List Price in Quote and Order Configurator.</inlineHelpText>
        <label>Edit List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__EditProductName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Edits to Product Name in Quote and Order Configurator.</description>
        <inlineHelpText>Allow Edits to Product Name in Quote and Order Configurator</inlineHelpText>
        <label>Edit Product Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__EditServiceTermBehavior__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Edits to Service Term Behavior in Quote and Order configurator page.</description>
        <inlineHelpText>Allow Edits to Service Term Behavior in Quote and Order configurator page</inlineHelpText>
        <label>Edit Service Term Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__EditUnitCost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Edits to Unit Cost in Quote and Order Configurator.</description>
        <inlineHelpText>Allow Edits to Unit Cost in Quote and Order Configurator</inlineHelpText>
        <label>Edit Unit Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__ExcludefromOpportunitySync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prohibits Syncing to Opportunity Products.

Applicable to Primary Quotes or Orders with Opportunity Lines Sync enabled.</description>
        <inlineHelpText>Prohibits Syncing to Opportunity Products

Applicable to Primary Quotes or Orders with Opportunity Lines Sync enabled</inlineHelpText>
        <label>Exclude from Opportunity Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__FreightClass__c</fullName>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>500 (Less than 1 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>400 (1 but less than 2 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>300 (2 but less than 3 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>250 (3 but less than 4 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>200 (4 but less than 5 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>175 (5 but less than 6 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>150 (6 but less than 7 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>125 (7 but less than 8 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>110 (8 but less than 9 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>100 (9 but less than 10.5 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>92.5 (10.5 but less than 12 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>85 (12 but less than 13.5 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>77.5 (13.5 but less than 15 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>70 (15 but less than 22.5 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>65 (22.5 but less than 30 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>60 (30 but less than 35 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>55 (35 but less than 50 lbs/cu ft)</fullName>
                </value>
                <value>
                    <fullName>50 (50 + lbs/cu ft)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hides Product from Kugamon Product Selection Pages. Useful to prevent new sales of the Product, while allowing existing sales.</inlineHelpText>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__KitBundlePricing__c</fullName>
        <inlineHelpText>3 pricing options to choose from: (1) price the Kit/Bundle header and include the members at $0, (2) price the entire Kit/Bundle as a sum of the Kit/Bundle header and the members, and (3) price the Kit/Bundle using only the member price</inlineHelpText>
        <label>Kit/Bundle Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit/Bundle Price Only</fullName>
                    <default>true</default>
                    <label>Kit/Bundle Price Only</label>
                </value>
                <value>
                    <fullName>Kit/Bundle Price  + Member Prices</fullName>
                </value>
                <value>
                    <fullName>Member Prices Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__KitBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check enables Kit/Bundle function. 
- Product Kit/Bundles may have EITHER Product and Service Kit/Bundle Members. 
- Service Kit/Bundles may ONLY contain Service Kit/Bundle Members.</description>
        <inlineHelpText>Check enables Kit/Bundle function. Product Kit/Bundles may have either Product and Service Kit/Bundle Members. Service Kit/Bundles may only contain Service Kit/Bundle Members. Unchecked disables Kit/Bundle function and deletes all Kit/Bundle members.</inlineHelpText>
        <label>Kit/Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockLineDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Line Description to be editable in Quote and Order configurator page. Does not lock the Line Description at the record level.</description>
        <inlineHelpText>Prevents Line Description to be editable in Quote and Order configurator page. Does not lock the Line Description at the record level</inlineHelpText>
        <label>Lock Line Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockLineDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Line Discount to be applied in Quote and Order configurator page. Does not lock the Line Discount fields at the record level. Does not apply to overall Quote or Order Discount.</description>
        <inlineHelpText>Prevents Line Discount to be applied in Quote and Order configurator page. Does not lock the Line Discount fields at the record level. Does not apply to overall Quote or Order Discount</inlineHelpText>
        <label>Lock Line Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level.</description>
        <inlineHelpText>Prevents Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</inlineHelpText>
        <label>Lock Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockSalesPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Sales Price to be editable in Quote and Order configurator page. Does not lock the Sales Price at the record level.</description>
        <inlineHelpText>Prevents Sales Price to be editable in Quote and Order configurator page. Does not lock the Sales Price at the record level</inlineHelpText>
        <label>Lock Sales Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockServiceTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents Service Term to be editable in Quote and Order configurator page. Does not lock the Service Term at the record level.</description>
        <inlineHelpText>Prevents Service Term to be editable in Quote and Order configurator page. Does not lock the Service Term at the record level</inlineHelpText>
        <label>Lock Service Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__MaximumQuantity__c</fullName>
        <description>Sets the maximum Quantity value limit in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the maximum Quantity value limit in Quote and Order configurator page</inlineHelpText>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__MinimumQuantity__c</fullName>
        <description>Sets the minimum Quantity value limit in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the minimum Quantity value limit in Quote and Order configurator page</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__NonStock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PercentOfUnitPrice__c</fullName>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <inlineHelpText>An alternate method of pricing a Service. This pricing model uses a percent of the price another product to determine the price of this Service. For example, a Support Service that is priced 20% of the underlying Product Price.</inlineHelpText>
        <label>Deprecated</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__PercentofPriceBasedon__c</fullName>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PricingMethod__c</fullName>
        <description>Set Product Pricing by List, use List Price as basis for Sales Price, or by Cost, use Product Cost plus Markup as basis for Sales Price. If blank. List pricing method is used.</description>
        <inlineHelpText>Set Product Pricing by List, use List Price as basis for Sales Price, or by Cost, use Product Cost plus Markup as basis for Sales Price. If blank. List pricing method is used</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__PricingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PrintKitBundleMembersonPDFs__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Option to Print Kit/Bundle Member Lines on Quote, Order and Invoice documents. Do NOT Uncheck if Kit/Member Lines contain a Scheduled Service (Ex: Recurring Monthly Service)</inlineHelpText>
        <label>Print Kit/Bundle Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintProductTextandTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines if the Text and Terms will be shown on the Quote and Order</inlineHelpText>
        <label>Print Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductCode__c</fullName>
        <label>Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductTextandTerms__c</fullName>
        <label>Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuantityScale__c</fullName>
        <description>Sets the Quantity decimal support in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the Quantity decimal support in Quote and Order configurator page</inlineHelpText>
        <label>Quantity Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ReferenceProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Additional_Product_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceTermBehavior__c</fullName>
        <defaultValue>&quot;Included&quot;</defaultValue>
        <description>Included or if blank, will factor Service Term in Service Amount Calculation and Invoice Schedule. Price depends on Term.

Excluded will not factor Term in Service Amount Calculation and Invoice Schedule (Service behaves as a Product). Price independent of Term.</description>
        <inlineHelpText>Included or if blank, will factor Term in Service Amount Calculation and Invoice Schedule. Price depends on Term.

Excluded will not factor Term in Service Amount Calculation and Invoice Schedule (Service behaves as a Product). Price independent of Term</inlineHelpText>
        <label>Service Term Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__ServiceTermBehavior</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceTermScale__c</fullName>
        <description>Sets the Service Term decimal support in Quote and Order configurator page.</description>
        <inlineHelpText>Sets the Service Term decimal support in Quote and Order configurator page</inlineHelpText>
        <label>Service Term Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determine if a product is considered a Service rather than a Good. If considered a Service, then final pricing to customers considers the Service Term in the calculations.</inlineHelpText>
        <label>Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__StandardPrice__c</fullName>
        <inlineHelpText>Standard Price Book Price. This field is set when the related Product record is updated and not via a Price Book Entry update. Changing value on this record does not update Price Book Entry.</inlineHelpText>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitofMeasure__c</fullName>
        <label>Quantity Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__UnitofTerm__c</fullName>
        <label>Unit of Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Galactic Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__VAT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>VAT is only Applied to this Product/Service Sale when Both the Taxable VAT Checkbox is Checked and this VAT Field is Filled.</inlineHelpText>
        <label>VAT/GST</label>
        <referenceTo>kugo2p__VAT__c</referenceTo>
        <relationshipLabel>Additional Product Info</relationshipLabel>
        <relationshipName>Additional_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Product Info</label>
    <listViews>
        <fullName>kugo2p__AllProducts</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__ProductCode__c</columns>
        <columns>kugo2p__NonStock__c</columns>
        <columns>kugo2p__DisableShipments__c</columns>
        <columns>kugo2p__KitBundle__c</columns>
        <columns>kugo2p__Service__c</columns>
        <columns>kugo2p__DefaultServiceTerm__c</columns>
        <columns>kugo2p__UnitofTerm__c</columns>
        <columns>kugo2p__Hide__c</columns>
        <columns>kugo2p__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>kugo2p__All_Active</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__ProductCode__c</columns>
        <columns>kugo2p__LockQuantity__c</columns>
        <columns>kugo2p__DefaultServiceTerm__c</columns>
        <columns>kugo2p__DefaultQuantity__c</columns>
        <columns>kugo2p__MaximumQuantity__c</columns>
        <columns>kugo2p__MinimumQuantity__c</columns>
        <columns>kugo2p__LockLineDescription__c</columns>
        <columns>kugo2p__DefaultLineDescription__c</columns>
        <columns>kugo2p__LockSalesPrice__c</columns>
        <columns>kugo2p__LockLineDiscount__c</columns>
        <columns>kugo2p__Service__c</columns>
        <columns>kugo2p__UnitofTerm__c</columns>
        <columns>kugo2p__LockServiceTerm__c</columns>
        <columns>kugo2p__Hide__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>kugo2p__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Product Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>kugo2p__AdditionalProductDetailLocked</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( kugo2p__ReferenceProduct__c )</errorConditionFormula>
        <errorDisplayField>kugo2p__ReferenceProduct__c</errorDisplayField>
        <errorMessage>This Field Cannot Be Changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__KitBundleCheck</fullName>
        <active>true</active>
        <description>Confirms Kit/Bundle setup is correct</description>
        <errorConditionFormula>OR(
  AND(
    OR(
      kugo2p__KitBundle__c = true,
      TEXT(kugo2p__ConfigurationMethod__c) = &apos;Kit/Bundle&apos;
    ),
    Text(kugo2p__KitBundlePricing__c) = &quot;&quot;
  ),
  AND(
    kugo2p__KitBundle__c = true,
    TEXT(kugo2p__ConfigurationMethod__c) = &apos;Configure&apos;
  )
)</errorConditionFormula>
        <errorMessage>Kit/Bundle setup is incomplete. Please set Configuration Method to &apos;Kit/Bundle&apos; and select Kit/Bundle Pricing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MaximumQuantityDefaultCheck</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__MaximumQuantity__c  &lt; kugo2p__DefaultQuantity__c</errorConditionFormula>
        <errorDisplayField>kugo2p__MaximumQuantity__c</errorDisplayField>
        <errorMessage>Maximum Quantity must be greater than or equal to Default Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MaximumQuantityMinimumCheck</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__MaximumQuantity__c  &lt;  kugo2p__MinimumQuantity__c</errorConditionFormula>
        <errorDisplayField>kugo2p__MaximumQuantity__c</errorDisplayField>
        <errorMessage>Maximum Quantity must be greater than or equal to Minimum Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__MaximumQuantityZeroCheck</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__MaximumQuantity__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>kugo2p__MaximumQuantity__c</errorDisplayField>
        <errorMessage>Maximum Quantity must be greater than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__Percent_of_Price_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(kugo2p__PercentOfUnitPrice__c  &gt; 0,   ISPICKVAL(kugo2p__PercentofPriceBasedon__c,&quot;&quot;)  )</errorConditionFormula>
        <errorDisplayField>kugo2p__PercentofPriceBasedon__c</errorDisplayField>
        <errorMessage>Please Choose Price Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__ServiceBasicCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 kugo2p__Service__c  = true, 
Text( kugo2p__UnitofTerm__c )=&quot;&quot;
)</errorConditionFormula>
        <errorDisplayField>kugo2p__UnitofTerm__c</errorDisplayField>
        <errorMessage>Service requires a Unit of Term. Please Pick a Unit of Term.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__VATCheck</fullName>
        <active>true</active>
        <description>VAT Must Be Picked, If Taxable VAT is Checked</description>
        <errorConditionFormula>AND (
  kugo2p__TaxableVAT__c = true, 
  kugo2p__VAT__c=&quot;&quot;
)</errorConditionFormula>
        <errorDisplayField>kugo2p__VAT__c</errorDisplayField>
        <errorMessage>Please Choose VAT.</errorMessage>
    </validationRules>
</CustomObject>